crates/pith-cli/tests/snapshots/help__the_check_help_is_stable.snap
---
source: crates/pith-cli/tests/help.rs
expression: "help(&[\"check\"])"
---
Elaborate the module at PATH and report its errors and warnings

Usage: pith check [OPTIONS] <PATH>

Arguments:
  <PATH>  The module to elaborate

Options:
      --deny <SEVERITY>  Treat warnings as a failure [possible values: warnings]
      --output <OUTPUT>  Output shape. Defaults to pretty on a TTY, plain otherwise [possible values: pretty, plain, json]
      --store <DIR>      Content store root. Defaults to $PITH_HOME/store [env: PITH_STORE=]
      --state <FILE>     Engine state root. Defaults to $PITH_HOME/state.db [env: PITH_STATE=]
  -h, --help             Print help
  -V, --version          Print version
