crates/pith-cli/tests/snapshots/help__the_fmt_help_is_stable.snap
---
source: crates/pith-cli/tests/help.rs
expression: "help(&[\"fmt\"])?"
---
Write the canonical spelling of the module at PATH

Usage: pith fmt [OPTIONS] <PATH>

Arguments:
  <PATH>  The module whose canonical spelling is written or verified

Options:
      --check            Verify the module is already canonical, without writing
      --output <OUTPUT>  Output shape. Defaults to pretty on a TTY, plain otherwise [possible values: pretty, plain, json]
      --store <DIR>      Content store root. Defaults to $PITH_HOME/store [env: PITH_STORE=]
      --state <FILE>     Engine state root. Defaults to $PITH_HOME/state.db [env: PITH_STATE=]
  -h, --help             Print help
  -V, --version          Print version
