crates/pith-cli/tests/snapshots/help__the_state_group_help_is_stable.snap
---
source: crates/pith-cli/tests/help.rs
expression: "help(&[\"state\"])?"
---
Inspect engine state

Usage: pith state [OPTIONS] <COMMAND>

Commands:
  info   Schema versions, adapter, and record counts
  check  Decode every durable record the state database holds
  help   Print this message or the help of the given subcommand(s)

Options:
      --output <OUTPUT>  Output shape. Defaults to pretty on a TTY, plain otherwise [possible values: pretty, plain, json]
      --store <DIR>      Content store root. Defaults to $PITH_HOME/store [env: PITH_STORE=]
      --state <FILE>     Engine state root. Defaults to $PITH_HOME/state.db [env: PITH_STATE=]
  -h, --help             Print help
  -V, --version          Print version
