crates/pith-cli/tests/snapshots/help__the_store_group_help_is_stable.snap
---
source: crates/pith-cli/tests/help.rs
expression: "help(&[\"store\"])"
---
Inspect and admit content

Usage: pith store [OPTIONS] <COMMAND>

Commands:
  add          Put a file or directory into the store and print its identity
  cat          Write a blob to stdout
  ls           List a tree's entries
  materialize  Render a tree into a new directory
  help         Print this message or the help of the given subcommand(s)

Options:
      --output <OUTPUT>  Output shape. Defaults to pretty on a TTY, plain otherwise [possible values: pretty, plain, json]
      --store <DIR>      Content store root. Defaults to $PITH_HOME/store [env: PITH_STORE=]
      --state <FILE>     Engine state root. Defaults to $PITH_HOME/state.db [env: PITH_STATE=]
  -h, --help             Print help
  -V, --version          Print version
